put template frontmatter in all remaining writeups

--- a/src/content/docs/writeups/MedJed.mdx
+++ b/src/content/docs/writeups/MedJed.mdx
@@ -1,3 +1,8 @@
+---
+layout: /src/layouts/PostLayout.astro
+title: Lavita
+tags: []
+---
 **Start 13:22 15-05-2025**
 
 ---
@@ -228,4 +233,5 @@ Now we wait for the system to restart and give us our reverse shell:
 **Finished 14:43 15-05-2025**
 
 [^Links]:  [[OSCP Prep]]
+
 
