--- a/src/content/docs/writeups/Roquefort.mdx
+++ b/src/content/docs/writeups/Roquefort.mdx
@@ -1,3 +1,8 @@
+---
+layout: /src/layouts/PostLayout.astro
+title: Lavita
+tags: []
+---
 **Start 09:47 03-01-2025**
 
 ---
@@ -215,5 +220,6 @@ We can now go ahead and run `bash -p` to elevate our shell:
 [^Links]: [[OSCP Prep]]  
 
 #cron #priv-esc #gitea 
+
 
 
