--- a/src/content/docs/writeups/Mantis.mdx
+++ b/src/content/docs/writeups/Mantis.mdx
@@ -1,3 +1,8 @@
+---
+layout: /src/layouts/PostLayout.astro
+title: Lavita
+tags: []
+---
 **Start 09:12 07-02-2025**
 
 ---
@@ -269,4 +274,5 @@ Hell yeah, let's get `proof.txt`.
 **Finished 10:44 07-02-2025**
 
 [^Links]: [[OSCP Prep]]
+
 
