--- a/src/content/docs/writeups/Marketing.mdx
+++ b/src/content/docs/writeups/Marketing.mdx
@@ -1,3 +1,8 @@
+---
+layout: /src/layouts/PostLayout.astro
+title: Lavita
+tags: []
+---
 **Start 13:03 05-01-2025**
 
 ---
@@ -276,3 +281,4 @@ Thank god we had ALL permissions.
 [^Links]:  [[OSCP Prep]]
 
 #enumeration #priv-esc #mlocate #gobuster #LimeSurvey #MySQL 
+
