--- a/src/content/docs/writeups/Mzeeav.mdx
+++ b/src/content/docs/writeups/Mzeeav.mdx
@@ -1,3 +1,8 @@
+---
+layout: /src/layouts/PostLayout.astro
+title: Lavita
+tags: []
+---
 **Start 10:13 28-04-2025**
 
 ---
@@ -169,6 +174,7 @@ Using GTFOBins we find the binary and what we need for privesc:
 **Finished 11:40 28-04-2025**
 
 [^Links]: [[OSCP Prep]] [[File Upload Attacks]]
+
 
 
 
